CHATS_SIT/force-app/main/default/objects/batchdev_t_pos_trans_queue_ats__x.object
<CustomObject>
    <description>batchdev$t_pos_trans_queue_ats</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchdev$t_pos_trans_queue_ats</externalName>
    <fields>
        <fullName>idn_child_enroll__c</fullName>
        <description>idn_child_enroll</description>
        <externalDeveloperName>idn_child_enroll</externalDeveloperName>
        <label>idn_child_enroll</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>drop_in_days_at_the_authorization_level__c</fullName>
        <description>drop_in_days_at_the_authorization_level</description>
        <externalDeveloperName>drop_in_days_at_the_authorization_level</externalDeveloperName>
        <label>drop_in_days_at_the_authorization_level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_county__c</fullName>
        <description>cde_county</description>
        <externalDeveloperName>cde_county</externalDeveloperName>
        <label>cde_county</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_trans__c</fullName>
        <description>cde_status_trans</description>
        <externalDeveloperName>cde_status_trans</externalDeveloperName>
        <label>cde_status_trans</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_trans__c</fullName>
        <description>cde_type_trans</description>
        <externalDeveloperName>cde_type_trans</externalDeveloperName>
        <label>cde_type_trans</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>createdbyid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>createddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>dte_change_last</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>error_details__c</fullName>
        <description>error_details</description>
        <externalDeveloperName>error_details</externalDeveloperName>
        <label>error_details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>idn_agrmt_fiscal__c</fullName>
        <description>idn_agrmt_fiscal</description>
        <externalDeveloperName>idn_agrmt_fiscal</externalDeveloperName>
        <label>idn_agrmt_fiscal</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>idn_auth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>idn_case</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>idn_client</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_extnl__c</fullName>
        <description>idn_extnl</description>
        <externalDeveloperName>idn_extnl</externalDeveloperName>
        <label>idn_extnl</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_plan_cnty__c</fullName>
        <description>idn_plan_cnty</description>
        <externalDeveloperName>idn_plan_cnty</externalDeveloperName>
        <label>idn_plan_cnty</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_pos_trans_queue_ats__c</fullName>
        <description>idn_pos_trans_queue_ats</description>
        <externalDeveloperName>idn_pos_trans_queue_ats</externalDeveloperName>
        <label>idn_pos_trans_queue_ats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_slot_contract__c</fullName>
        <externalDeveloperName>idn_slot_contract</externalDeveloperName>
        <label>idn_slot_contract</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slot_contract_description__c</fullName>
        <externalDeveloperName>slot_contract_description</externalDeveloperName>
        <label>slot_contract_description</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auth_drop_in_days__c</fullName>
        <description>auth_drop_in_days</description>
        <externalDeveloperName>auth_drop_in_days</externalDeveloperName>
        <label>auth_drop_in_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>idn_provr</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>lastmodifiedbyid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>lastmodifieddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>name</description>
        <externalDeveloperName>name</externalDeveloperName>
        <label>name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>batchdev$t_pos_trans_queue_ats</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>batchdev$t_pos_trans_queue_ats</pluralLabel>
</CustomObject>